# CLib-rewritten

./: #ft_strnequ.c#  #strlen#  CMakeLists.txt  author  ft_atoi.c  ft_bit_to_max_int_size.c  ft_bzero.c  ft_int_to_binary.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprime.c  ft_isprint.c  ft_itoa.c  ft_itoa_second.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_revstr.c  ft_sqrt.c  (+42 more)
fd/: ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c
get_next_line/: get_next_line.c  get_next_line.h
includes/: libft.h
io/: get_next_line.c  get_next_line.h
list/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c
mem/: ft_memccpy.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
memory/: ft_memalloc.c  ft_memchr.c  ft_memcmp.c
practice_dir/: main.c
print/: ft_putchar.c  ft_putendl.c  ft_putnbr.c  ft_putstr.c
string/: ft_bzero.c  ft_revstr.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtolower.c  ft_strtrim.c
utils/: ft_atoi.c  ft_bit_to_max_int.c  ft_bit_to_max_int_size.c  (+3 more)
