cmake_minimum_required(VERSION 3.12)
project(libft C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(libft
        main.c
        ft_strlcat.c
        ft_memcpy.c
        ft_strnstr.c
        ft_memmove.c
        ft_strcat.c
        ft_strlen.c
        ft_strncat.c
        libft.h
        ft_strchr.c
        ft_strrchr.c
        ft_memset.c
        ft_isascii.c
        ft_strstr.c
        ft_strcmp.c
        ft_strncmp.c
        ft_atoi.c
        ft_toupper.c
        ft_isprint.c
        ft_isalnum.c
        ft_isdigit.c
        ft_isalpha.c
        ft_memset.c
        ft_bzero.c
        ft_memccpy.c
        ft_memchr.c
        ft_memcmp.c ft_memalloc.c ft_memdel.c ft_strnew.c ft_strdel.c ft_strclr.c ft_striter.c ft_striteri.c ft_strmap.c ft_strmapi.c ft_strequ.c ft_strnequ.c ft_strsub.c ft_strjoin.c ft_strtrim.c ft_strsplit.c ft_putchar.c ft_putstr.c ft_putendl.c ft_putnbr.c ft_putchar_fd.c ft_itoa.c ft_lstnew.c ft_lstdelone.c ft_lstdel.c ft_lstadd.c ft_lstiter.c ft_lstmap.c)
